--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -164,7 +164,7 @@ android {
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.debug
+            //signingConfig signingConfigs.debug
             buildConfigField "String", "CODEPUSH_KEY", '""'
         }
 
