--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-onesignal": "^3.6.1",
+    "react-native-share": "^3.3.2",
     "react-native-swift": "^1.2.2",
     "react-native-track-player": "^1.1.8",
     "react-native-vector-icons": "^6.6.0",
